--- a/views/home.pug
+++ b/views/home.pug
@@ -40,6 +40,15 @@ block content
                 .col-xs-12
                   a.anchor--hidden#hosting-table
                   include includes/home/hosting-table
+          section.advertisement.background-inverse.background-inverse--blue
+            .container
+              .row
+                .col-sm-12
+                  div.u-mt-large
+                    small AD
+                  div.u-mt-small.u-mb-large
+                    p Do you have a great tools or a service that helps developers launching or maintaining their websites?<br>
+                      | If you would like to advertize it here, get in touch (contact page)!
           a.anchor--hidden#domain
           section.domain.category.background-inverse
             .container
@@ -147,10 +156,10 @@ block content
               .row
                 .col-sm-12
                   h2.category__header Static websites
-                  p When you don't need a backend for your website, you can publish it as a static page.<br>
-                    | It doesn't require a lot of computing resources and many companies will help you for free.<br>
-                    | You can deploy websites straight from the command line or from a git repository.<br>
-                    | If you anticipate adding more features (maybe a database?), select the advanced option.
+                  p When you don't need a backend for your website, check out the static websites hosting.<br>
+                    | It doesn't require a lot of computing resources so there are many free tools for static websites.<br>
+                    | You can deploy them straight from a git repository or from the command line.<br>
+                    | If you anticipate adding more features (maybe a database?), check the advanced option.
               include includes/home/static-table
           section#newsletter.subscribe.background-inverse.background-inverse--blue
             .container
