Or grey background, not raised

--- a/views/home.pug
+++ b/views/home.pug
@@ -40,15 +40,17 @@ block content
                 .col-xs-12
                   a.anchor--hidden#hosting-table
                   include includes/home/hosting-table
-          section.advertisement.background-inverse.background-inverse--blue
-            .container
-              .row
-                .col-sm-12
-                  div.u-mt-large
-                    small AD
-                  div.u-mt-small.u-mb-large
-                    p Do you have a great tools or a service that helps developers launching or maintaining their websites?<br>
-                      | If you would like to advertize it here, get in touch (contact page)!
+  section.advertisement.text-center
+    .container
+      .row
+        .col-sm-12.u-mt-large.u-mb-large
+          div.u-mt-large
+            small AD
+          div.u-mt-small.u-mb-large
+            p Do you have a great tools or a service that helps developers launching or maintaining their websites?<br>
+              | If you would like to advertize it here, get in touch (contact page)!
+    .main.main-raised
+        .text-center
           a.anchor--hidden#domain
           section.domain.category.background-inverse
             .container
