--- a/views/home.pug
+++ b/views/home.pug
@@ -13,8 +13,16 @@ block content
             p.hero__lead Tired of comparing hosting plans, calculating the file storage cost or paying for the SSL certificates?
             p.hero__lead DeployStack is a list of the best, hand picked tools and services that you might need when launching a website.
             .hero__buttons.text-center
-              a.btn.btn-ghost.u-bold.u-mx-small(href="#ssl") Get free SSL certificate
-              a.btn.btn-ghost.u-bold.u-mx-small(href="/faq#general") How we select tools?
+              .dropdown-relative
+                a.btn.btn-ghost.u-bold.u-no-margin.dropdown-toggle(href="#" data-toggle="dropdown") How to get free... #[b.caret]
+                ul.dropdown-menu.dropdown-menu-right
+                  li #[a(href="/#hosting") Hosting]
+                  li #[a(href="/#ssl") SSL certificate]
+                  li #[a(href="/#monitoring") Uptime monitoring]
+                  li #[a(href="/#error-tracking") Error tracking]
+                  li #[a(href="/#continuous-integration") Continuous integration]
+                  li #[a(href="/#static-websites") Static websites hosting]
+              a.btn.btn-ghost.u-bold.u-ml-small(href="/faq#general") How we select tools?
             p.hero__disclaimer.text-center Full disclosure: Some of the links are #[a.hero__link(data-toggle="modal", data-target="#affiliations-disclaimer", aria-label="Affiliations disclaimer information") affiliate links]
   main
     .main.main-raised
