Added cloud-computing section

--- a/views/home.pug
+++ b/views/home.pug
@@ -160,6 +160,17 @@ block content
                     | You can deploy websites straight from the command line or from a git repository.<br>
                     | If you anticipate adding more features (maybe a database?), select the advanced option.
               include includes/home/static-table
+          a.anchor--hidden#cloud-computing
+          section.cloud-computing
+            .container
+              .row
+                .col-sm-12
+                  h2.category__header Cloud computing
+                  p On the other hand, sometimes you will need more than just a simple hosting or a handful of tools.<br>
+                    | When you need a lot of different services, it might be easier and cheaper to use one of those cloud computing companies.<br>
+                    | Due to the complexity of each platform and frequent changes of features/pricing, it's impossible to make a reliable comparison of all the features (although some websites tried: #[a(href="https://www.sitepoint.com/a-side-by-side-comparison-of-aws-google-cloud-and-azure/" target="_blank") Sitepoint], #[a(href="https://news.ycombinator.com/item?id=11515505" target="_blank") Hacker News], #[a(href="http://www.rightscale.com/blog/cloud-cost-analysis/aws-vs-azure-vs-google-cloud-pricing-compute-instances" target="_blank") RightScale]).<br>
+                    | Based on your specific use case, you will have to decide on the best option yourself.
+              include includes/home/cloud-computing
           section#newsletter.subscribe.background-inverse.background-inverse--blue
             .container
               .row
