--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -24,6 +24,7 @@ nav.navbar.navbar-transparent.navbar-fixed-top.navbar-color-on-scroll.navbar-inf
             li #[a(href="/#version-control") Version Control]
             li #[a(href="/#continuous-integration") Continuous integration]
             li #[a(href="/#static-websites") Static websites]
+            li #[a(href="/#cloud-computing") Cloud computing]
         li(class=(title == 'FAQ') ? 'active' : null)
           a(href='/faq') FAQ
         li(class=(title == 'Contact') ? 'active' : null)
