--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -276,6 +276,7 @@ p {
 // Hosting category //////////////////////////////////////////////////////////
 // Make hosting price equal height (except on mobile!)
 // and put the sign up button at the bottom
+.price-card--350,
 .price-card--400,
 .price-card--450,
 .price-card--500,
@@ -284,6 +285,12 @@ p {
 }
 
 @media screen and (min-width: 400px){
+  .price-card--350 {
+    min-height: 350px;
+    padding-bottom: 0;
+    position: relative;
+  }
+
   .price-card--400 {
     min-height: 400px;
     padding-bottom: 0;
