--- a/views/home.pug
+++ b/views/home.pug
@@ -158,7 +158,7 @@ block content
                   p When you don't need a backend for your website, you can publish it as a static page.<br>
                     | It doesn't require a lot of computing resources and many companies will help you for free.<br>
                     | You can deploy websites straight from the command line or from a git repository.<br>
-                    | If you anticipate adding more features (maybe a database?), select the advanced option.
+                    | If you anticipate adding more features (maybe a database?), check the advanced option.
               include includes/home/static-table
           a.anchor--hidden#cloud-computing
           section.cloud-computing
@@ -166,11 +166,14 @@ block content
               .row
                 .col-sm-12
                   h2.category__header Cloud computing
-                  p On the other hand, sometimes you will need more than just a simple hosting or a handful of tools.<br>
-                    | When you need a lot of different services, it might be easier and cheaper to use one of those cloud computing companies.<br>
-                    | Due to the complexity of each platform and frequent changes of features/pricing, it's impossible to make a reliable comparison of all the features (although some websites tried: #[a(href="https://www.sitepoint.com/a-side-by-side-comparison-of-aws-google-cloud-and-azure/" target="_blank") Sitepoint], #[a(href="https://news.ycombinator.com/item?id=11515505" target="_blank") Hacker News], #[a(href="http://www.rightscale.com/blog/cloud-cost-analysis/aws-vs-azure-vs-google-cloud-pricing-compute-instances" target="_blank") RightScale]).<br>
-                    | Based on your specific use case, you will have to decide on the best option yourself.
+                  p Sometimes a simple hosting and a domain are not enough.<br>
+                    | When you need a bunch of different tools, check out the cloud computing companies.<br>
+                    | They may be more expensive, but having all tools in one place is easier (especially if your website grows bigger).<br>
               include includes/home/cloud-computing
+              .row
+                .col-sm-12.u-mb-medium
+                  small.u-small Cloud computing platforms are complex and hard to compare (they change the list of features and pricing often).<br>
+                    | Based on a specific use case, you will have to pick the best option yourself. Check those articles if you need help choosing: #[a(href="https://www.sitepoint.com/a-side-by-side-comparison-of-aws-google-cloud-and-azure/" target="_blank") Sitepoint], #[a(href="https://news.ycombinator.com/item?id=11515505" target="_blank") Hacker News], #[a(href="http://www.rightscale.com/blog/cloud-cost-analysis/aws-vs-azure-vs-google-cloud-pricing-compute-instances" target="_blank") RightScale].
           section#newsletter.subscribe.background-inverse.background-inverse--blue
             .container
               .row
