--- a/views/includes/home/static-table.pug
+++ b/views/includes/home/static-table.pug
@@ -103,7 +103,8 @@ mixin firebase-signup
               li Free SSL certificates
               li HTTP2 support
               li Requires manual deployment
-              li Apart from static pages, Firebase provides tools and infrastructure for all kind of websites and apps (check the cloud computing section)
+              li Not only for static pages<br>
+                | (various tools and infrastructure for all kinds of websites and apps)
               li Functions - serverless backend (like Amazon Lambda)
             .absolute-signup-button
               +firebase-signup
