Fixed a bug in segment
* Because there was an element with ID "analytics" on the page,
  analytics.js snippet from segment was not working.

--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -16,7 +16,7 @@ nav.navbar.navbar-transparent.navbar-fixed-top.navbar-color-on-scroll.navbar-inf
             li #[a(href="/#domain") Domains]
             li #[a(href="/#ssl") SSL]
             li #[a(href="/#monitoring") Monitoring]
-            li #[a(href="/#analytics") Analytics]
+            li #[a(href="/#web-analytics") Analytics]
             li #[a(href="/#files-storage") Files storage]
             li #[a(href="/#cdn") CDN]
             li #[a(href="/#error-tracking") Error tracking]
