--- a/views/home.pug
+++ b/views/home.pug
@@ -80,8 +80,8 @@ block content
                     | There are automatic tools that will check it and notify you when something is wrong (your website is down or has errors).<br>
                     | Check out the best #[strong free] uptime monitors.
               include includes/home/monitoring-table
-          a.anchor--hidden#analytics
-          section.analytics.category
+          a.anchor--hidden#web-analytics
+          section.web-analytics.category
             .container
               .row.u-mb-medium
                 .col-xs-12.col-sm-6
